# ScenarioReducer

./: CHANGELOG.md  README.md  main_example.py  pyproject.toml  setup.py
scenarioReducer/: __init__.py  environment-test.yml  fast_forward.py  requirements-test.txt  scenario_reducer.py
scenarioReducer/tests/: test_fast_forward.py
tests/: test_fast_forward.py
